Fixed z-indexing

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body::before {
         linear-gradient(135deg, transparent 0%, transparent 45%, #dbd6ff 45%, #dbd6ff 46.75%, transparent 46.75%, transparent 100%),
         linear-gradient(135deg, transparent 0%, transparent 65%, #ccfcff 65%, #ccfcff 66.75%, transparent 66.75%, transparent 100%),
         linear-gradient(135deg, transparent 0%, transparent 25%, #f7d0ff 25%, #f7d0ff 26.75%, transparent 26.75%, transparent 100%);
-    z-index: 0.5;
+    z-index: 1;
     pointer-events: none;
 }
 
@@ -114,4 +114,36 @@ body::before {
 
 .popup-content > p {
     font-size: 1em;
+}
+.footer {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    margin-top: 60px;
+    padding: 30px 20px;
+    z-index: 0;
+}
+
+.footer-link {
+    color: rgba(0, 0, 0, 0.8);
+    text-decoration: none;
+    font-weight: 500;
+    padding: 8px 12px;
+    border-radius: 8px;
+    transition: all 0.3s ease-out;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 0;
+
+}
+
+.footer-link:hover {
+    color: black;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(20px);
+    text-decoration: none;
 }
